# AI-SortingRobotArm

./: 5th-year.py  CODING_STYLE.md  CONTACT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  README.md
arduino sketches/servo_control/: interpolation.cpp  interpolation.h  servo_control.ino
interpolation_methods/: interpolation_methods.sln
interpolation_methods/simultaneous_equations/: main.cpp  simultaneous_equations.vcxproj
interpolation_methods/simultaneous_equations/x64/Debug/: interpolation_methods.exe.recipe  main.obj.enc  simultaneous_equations.exe.recipe  vc143.idb
interpolation_methods/simultaneous_equations/x64/Debug/interpol.e849894b.tlog/: CL.read.1.tlog  interpolation_methods.lastbuildstate  link.write.1.tlog
interpolation_methods/simultaneous_equations/x64/Debug/simultan.e849894b.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  simultaneous_equations.lastbuildstate
kinematics_and_interpolation/Four_Degree_of_freedom_robotic_Arm/: Four_Degree_of_freedom_robotic_Arm.sln
kinematics_and_interpolation/Four_Degree_of_freedom_robotic_Arm/Four_Degree_of_freedom_robotic_Arm/: Four_Degree_of_freedom_robotic_Arm.vcxproj  Four_Degree_of_freedom_robotic_Arm.vcxproj.filters  kinematics.cpp  kinematics.h  main.cpp
kinematics_and_interpolation/interpolation_methods/: interpolation_methods.sln
kinematics_and_interpolation/interpolation_methods/simultaneous_equations/: main.cpp  simultaneous_equations.vcxproj
robotic_arm_bringup/: CMakeLists.txt  package.xml
robotic_arm_bringup/config/: controller_configuration.yaml
robotic_arm_bringup/launch/: controllers.launch.py  real_robotic_arm.launch.py  sim_robotic_arm.launch.py
robotic_arm_camera/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robotic_arm_camera/launch/: robot_arm_camera.launch.py
robotic_arm_camera/robotic_arm_camera/: __init__.py  camera_publisher.py  camera_subscriber.py  camera_subscription_node.py
robotic_arm_controllers/: CMakeLists.txt  package.xml  robotic_arm_controllers.xml  robotic_arm_hw_plugin.xml
robotic_arm_controllers/config/: robot_arm_controllers.yaml
robotic_arm_controllers/include/robotic_arm_controllers/: robotic_arm_hw_interface.hpp  robotic_arm_hwinterface.hpp
robotic_arm_controllers/launch/: robot_arm_controllers.launch.py
robotic_arm_controllers/src/: robotic_arm_hw_interface.cpp  robotic_arm_hwinterface.cpp
robotic_arm_custom_nodes/: package.xml  setup.cfg  setup.py
robotic_arm_custom_nodes/robotic_arm_custom_nodes/: arduino_data.py  fk_test_node.py  ik_client.py  inverse_kinematics_node.py  kinematics_solver.py
robotic_arm_description/: CMakeLists.txt  package.xml  rviz.rviz
robotic_arm_description/launch/: display.launch.xml  ik_urdf_display.launch.py  robot_arm_display.launch.py  robot_arm_gazebo.launch.py  robot_state_publisher.launch.py  spawn_robot_launch.launch.py  spawn_robotic_arm.py
robotic_arm_description/meshes/: Aruco-Cube.dae  Aruco-Cube.stl  base.stl  base_link.stl  camera_link.stl  camera_support.stl  container_1.stl  container_2.stl  container_hexagons.stl  gripper_base.stl  gripper_finger_1.stl  gripper_finger_2.stl  link_1.stl  link_2.stl  link_2a.stl  link_2b.stl  servomotormg996r_v2_1.stl  servomotormg996r_v2_2.stl  servomotormicro9g_v2_1.stl  servomotormicro9g_v2_2.stl  slidder_gripper_1.stl  slidder_gripper_2.stl  slider_slot.stl  waist.stl
robotic_arm_description/rviz_configs/: rviz_sim.rviz
robotic_arm_description/urdf/: aruco_marker.xacro  materials.xacro  robotic_arm.gazebo  robotic_arm.trans  robotic_arm.urdf  robotic_arm.urdf.xacro  robotic_arm.xacro  robotic_arm_camera.xacro  robotic_arm_controllers.xacro  robotic_arm_gazebo.xacro  robotic_arm_ros2_control.xacro  robotic_arm_urdf.urdf
robotic_arm_description/worlds/: robotic_arm_world.world
robotic_arm_firmware/: CMakeLists.txt  package.xml
robotic_arm_firmware/robotic_arm_firmware/: json_test.py  serial_receiver.py  serial_transmitter.py
robotic_arm_gazebo/: CMakeLists.txt  package.xml
robotic_arm_gazebo/launch/: display.launch.py  robotic_arm_launch.py  start_world_launch.py
robotic_arm_kinematics/: CMakeLists.txt  package.xml
robotic_arm_kinematics/launch/: robotic_arm_kinematics.launch.py
robotic_arm_kinematics/robotic_arm_kinematics/: ik_service_client_node.py  ik_service_server_node.py
robotic_arm_kinematics/src/: kinematics_node.cpp  trac_ik_solver.cpp
robotic_arm_moveit/: CMakeLists.txt  package.xml
robotic_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robotic_arm.srdf  robotic_arm.urdf.xacro
robotic_arm_moveit/launch/: moveit.launch.py
robotic_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotic_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robotic_arm.ros2_control.xacro  robotic_arm.srdf  robotic_arm.urdf.xacro  ros2_controllers.yaml
robotic_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robotic_arm_msgs/: CMakeLists.txt  package.xml
robotic_arm_msgs/msg/: JointAngles.msg  ObjectInference.msg  Yolov8Inference.msg
robotic_arm_msgs/srv/: IKSolver.srv
robotic_arm_recognition/: CMakeLists.txt  package.xml
robotic_arm_recognition/launch/: robotic_arm_recognition_model.launch.py
robotic_arm_recognition/robotic_arm_recognition/: yolov8_ros2_publisher.py  yolov8_ros2_subscriber.py
robotic_arm_recognition/test_files/: camera.py  camera_subscription_node.py
robotic_arm_transforms/: CMakeLists.txt  ReadMe  package.xml
robotic_arm_transforms/launch/: transforms.launch.xml
robotic_arm_transforms/src/: apply_transfroms.cpp  get_transform.cpp  get_transform.py
test_files/: camera.py  camera_subscription_node.py  pick_and_place_logic.py  py_serial.py  python_serial_trasmitter.py
(+22 files in other folders)
